
                                    Hatari
                                   --------
                                Release Notes


 Version 1.1.0 (2008-11-29):
 ---------------------------

Emulation:
- Falcon DSP emulation good enough to improve some few games/demos, e.g.
  Virtual City. (most still work better with emulation disabled, though)
- New sound engine that fixes all problems with the old one
- 16-bit stereo sound (instead of 8-bit mono)
- Improved blitter emulation (blitter cycles emulation, blitter interrupt)
- Improved STE support for some video registers (hscroll, linewidth, ...)
- Improved printer emulation
- Improved STE microwire emulation
- Improved support for games & demos which are accessing IKBD directly
  (including a fake 6301 emulation for the known IKBD programs)
- ACSI emulation fix to get HDDriver working
- Some other minor bugfixes to ST/STe emulation (FDC, MFP, PSG, RS-232)
- Improved MFP emulation
- Improved 68k emulation (move.b Ax,(Ay) and extb.l)
- Fixed bugs in the GEMDOS HD emulation (Pexec() etc.)

Emulator:
- Statusbar and overlay led features
- Screenshots work also in VDI/TT/Falcon mode and are saved as PNGs
- Support for automatic frameskip and pausing emulation
- Support for embedding Hatari window (on X11) and control socket
- Improved memory snapshot function
- Improved the "trace" debug function


 Version 1.0.1 (2008-03-30):
 ---------------------------

- This is just a bug-fix release, without new features.
- Fixed some compile problems on non-unix-like systems (like MingW).
- Fixed crashes in Spec512 emulation code ("Dan Dare 3" and little endian ARM).
- Blitter source address is not incremented anymore in operation mode 0 and 15.
- STE small overscan video effect is now displayed on the left side instead
  of the right side (fixes "Just Musix 2" menu for example).
- Hatari now works on 256 color displays right again.
- Fixed PSG mirror register emulation (fixes e.g. sample sound in "Ooh Crikey